Kubernetes with ArgoCD/dbservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mydb
spec:
  selector:
    app: db-pod
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
